# mcts_Cpp

./: CMakeLists.txt  LICENSE  README.md  main.cpp  my_own.cxx  okj.cpp  okj.h
include/: Agent.hpp  CustomDataset.hpp  Load_CSV.hpp  Model.hpp  Move.hpp  Node.hpp  State.hpp  Tree.hpp
scrs/: Agent.cpp  Node.cpp  State.cpp  Tree.cpp
